--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -32,4 +34,3 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-
